2003-03-05  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/variant.inc: Don't let FP be set in MSR in common HAL.
	Reported by Radu Cernea <rc@unusus.com>

2003-01-20  Gary Thomas  <gary@mlbassoc.com>

	* src/variant.S: Be careful about using QUICC functions unless that
	package is present (some MPC8xx platforms don't use it).

2003-01-18  Bart Veer  <bartv@ecoscentric.com>

	* src/variant.S: _mpc8xx_reset caused build failures with current
	tools.

2002-12-02  Gary Thomas  <gthomas@ecoscentric.com>

	* src/variant.S (_mpc8xx_reset): New function, used to cause a
	hardware reset of the platform.

2002-11-25  Gary Thomas  <gthomas@ecoscentric.com>

	* include/var_regs.h: Add CICR definitions.

2002-11-15  Gary Thomas  <gthomas@ecoscentric.com>

	* src/var_misc.c: Change in API for profile callback.

2002-11-14  Gary Thomas  <gthomas@ecoscentric.com>

	* src/var_misc.c: 
	* cdl/hal_powerpc_mpc8xx.cdl: Add support for profiling.

2002-11-13  Gary Thomas  <gthomas@ecoscentric.com>

	* include/var_cache.h (HAL_DCACHE_WRITE_MODE): Define for support
	of various modes (copyback/writethru)

2002-06-27  Gary Thomas  <gary@chez-thomas.org>

	* include/var_regs.h: Allow platform to override certain assumptions,
	e.g. the IMMR base, via <plf_regs.h>.

2002-06-20  Gary Thomas  <gary@chez-thomas.org>

	* include/var_regs.h (MI_RPN_LPS): Fix define.

2002-05-03  Gary Thomas  <gthomas@redhat.com>

	* tests/intr0.c: Fiddle to make this test run on all current MPC8xx
	boards (the MBX is especially cranky).  The problem lies with the
	fact that the timers used to run the test are very platform specific.

2002-04-24  Jesper Skov  <jskov@redhat.com>

	* cdl/hal_powerpc_mpc8xx.cdl: CYGPRI_KERNEL_TESTS_DHRYSTONE_PASSES
	defined.

2002-04-22  Gary Thomas  <gthomas@redhat.com>

	* tests/intr0.c: Only applicable if chained interrupts are *not*
	turned on.  Also, change setup to be a little more intuitive.

2002-04-11  Gary Thomas  <gthomas@redhat.com>
