@@ -1,3 +1,7 @@
+2003-03-05  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/var_misc.c (hal_variant_init): Reset CPM (ROM/monitor only).
+
 2003-03-05  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* include/variant.inc: Don't let FP be set in MSR in common HAL.
